Add spotbugs-maven-plugin